init gui and add pyqt6

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pillow>=12.0.0",
     "playwright==1.55.0",
     "pydantic>=2.12.3",
+    "pyqt6>=6.10.0",
     "tarina>=0.7.3",
 ]
 
