--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,23 @@
 [project]
 name = "wplace-auto-painter-pw"
 version = "0.1.0"
-description = "Add your description here"
+description = "Some awesome description..."
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
-    "anyio>=4.11.0",
-    "bot7685-ext>=0.1.3",
-    "cloudscraper>=1.2.71",
-    "httpx>=0.28.1",
-    "loguru>=0.7.3",
-    "pathlib>=1.0.1",
-    "pillow>=12.0.0",
-    "playwright==1.55.0",
-    "pydantic>=2.12.3",
-    "pyqt6>=6.10.0",
-    "tarina>=0.7.3",
+  "anyio>=4.11.0",
+  "bot7685-ext>=0.1.3",
+  "cloudscraper>=1.2.71",
+  "httpx>=0.28.1",
+  "loguru>=0.7.3",
+  "pillow>=12.0.0",
+  "playwright==1.55.0",
+  "pydantic>=2.12.3",
+  "pyqt6>=6.10.0",
 ]
+
+[dependency-groups]
+dev = ["pyinstaller>=6.16.0"]
 
 [tool.pyright]
 pythonVersion = "3.14"
