--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ dependencies = [
 [dependency-groups]
 dev = ["pyinstaller>=6.16.0"]
 
+[tool.uv]
+package = false
+python-downloads = "automatic"
+
 [tool.pyright]
 pythonVersion = "3.14"
 pythonPlatform = "All"
